# market-scan

./: .gitignore  .mcp.json  HANDOFF.md  LICENSE  README.md  cases.json  pyproject.toml  requirements.txt
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: architect-reviewer.md  finance-reviewer.md  market-scan-reviewer.md  market-scan-scout.md  pm-reviewer.md  polydig-reviewer.md  polydig-scout.md
.claude/commands/: dig.md  market-scan-setup.md  polydig-setup.md
.claude/skills/market-scan-daily/: SKILL.md
.claude/skills/polydig-daily/: SKILL.md
.github/workflows/: ci.yml
docs/: routine-setup.md  scheduling.md  zh-tw.md
docs/research/: 01-theme-case-studies.md  02-crash-precursors.md  03-crash-precursors-verified.md
docs/superpowers/plans/: 2026-05-31-phase-0-validator-plan.md
docs/superpowers/specs/: 2026-05-31-market-scan-design.md  2026-05-31-phase-0-results.md  2026-05-31-polydig-design.md
reports/2026-05-31_validator/: ai.md  defense.md  mask.md  shipping.md  silicon_photonics.md  summary.json  summary.md
reports/audit/: README.md  action-plan.md  architect-review.md  gdelt-wuhan-2019.json  vc-analysis.md
reports/optimization/: 01-architect-optimization.md  02-pm-user-flow.md  03-financial-analyst-value.md  net-alpha-all-cases.md  net-alpha-mask.md
src/market_scan_mcp/: __init__.py  daily_cli.py  scheduler.py
src/market_scan_mcp/common/: __init__.py  envelope.py  errors.py  http.py  settings.py  tokenize.py
src/market_scan_mcp/data/: README.md  crashwatch.py  finmind.py  macro.py  server.py  shipping.py
src/market_scan_mcp/history/: __init__.py  store.py
src/market_scan_mcp/news/: README.md  server.py  sources.py
src/market_scan_mcp/policy/: __init__.py  server.py
src/market_scan_mcp/price/: README.md  __init__.py  server.py  twse.py
src/market_scan_mcp/reporting/: __init__.py  generator.py  telegram.py
src/market_scan_mcp/reviewer/: __init__.py  backfill.py  backtest.py  engine.py  metrics.py  pipeline.py  prompt.py  replay.py  scout.py
src/market_scan_mcp/roadmap/: server.py
src/market_scan_mcp/storage/: __init__.py  db.py
src/market_scan_validator/: __init__.py  classifier.py  cli.py  excess_return.py  net_alpha.py  report.py
src/polydig_mcp/: __init__.py  daily_cli.py  scheduler.py
src/polydig_mcp/common/: __init__.py  http.py  io.py  settings.py
src/polydig_mcp/data/: README.md  __init__.py  crashwatch.py  finmind.py  macro.py  server.py  shipping.py
src/polydig_mcp/history/: store.py  themes.json
src/polydig_mcp/news/: README.md  __init__.py  server.py  sources.py
src/polydig_mcp/policy/: README.md  server.py
src/polydig_mcp/price/: README.md  server.py  (+1 more)
src/polydig_validator/: __init__.py  classifier.py  cli.py  data_fetcher.py  excess_return.py  net_alpha.py  report.py
tests/: test_anomaly_damping.py  test_backfill.py  test_backtest_recall.py  test_common.py  test_crashwatch.py  test_cross_market.py  test_daily_report_snapshot.py  test_demo_offline.py  test_finmind_prompt.py  test_history_match.py  test_mcp_integration.py  test_metrics.py  test_net_alpha.py  test_pipeline_dry.py  test_replay.py  test_report_generator.py  test_reviewer_engine.py  test_scheduler.py  test_shipping_anomaly.py  test_storage.py  test_telegram.py  test_tokenize.py
(+15 files in other folders)
