[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polydig"
version = "0.1.0"
description = "PolyDig — leading-edge stock-theme detection for the Taiwan market (Claude Code plugin)"
authors = [{name = "Arthur", email = "arthurwang@think4u-tech.com"}]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2",
    "requests>=2.31",
    "mcp>=1.0",
    "feedparser>=6.0",
    "pytrends>=4.9",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "jieba>=0.42",
]

[project.optional-dependencies]
agents = [
    "anthropic>=0.39",
    "chromadb>=0.5",
]
schedule = [
    "apscheduler>=3.10",
]

[project.scripts]
polydig-validator = "polydig_validator.cli:main"
polydig-news-mcp = "polydig_mcp.news.server:main"
polydig-data-mcp = "polydig_mcp.data.server:main"
polydig-price-mcp = "polydig_mcp.price.server:main"
polydig-policy-mcp = "polydig_mcp.policy.server:main"
polydig-roadmap-mcp = "polydig_mcp.roadmap.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/polydig_validator", "src/polydig_mcp"]
