[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "market-scan"
version = "0.1.0"
description = "Market Scan — leading-edge stock-theme detection for the Taiwan market (Claude Code plugin)"
authors = [{name = "Arthur", email = "arthurwang@think4u-tech.com"}]
requires-python = ">=3.11"
dependencies = [
    "pandas>=2.0",
    "yfinance>=0.2",
    "requests>=2.31",
    "mcp>=1.0",
    "feedparser>=6.0",
    "pytrends>=4.9",
    "python-dotenv>=1.0",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "jieba>=0.42",
]

[project.optional-dependencies]
agents = [
    "anthropic>=0.39",
    "chromadb>=0.5",
]
schedule = [
    "apscheduler>=3.10",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
market-scan-validator = "market_scan_validator.cli:main"
market-scan-daily = "market_scan_mcp.daily_cli:main"
market-scan-metrics = "market_scan_mcp.reviewer.metrics:main"
market-scan-news-mcp = "market_scan_mcp.news.server:main"
market-scan-data-mcp = "market_scan_mcp.data.server:main"
market-scan-price-mcp = "market_scan_mcp.price.server:main"
market-scan-policy-mcp = "market_scan_mcp.policy.server:main"
market-scan-roadmap-mcp = "market_scan_mcp.roadmap.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/market_scan_validator", "src/market_scan_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
# Each tests/test_*.py exposes a test_* wrapper around its main(); some hit live
# RSS/FRED/TWSE and degrade gracefully (no FinMind token needed).
